5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1664_2968.log
== TEST (2019-04-16 10:15:35) 
-- CODE:
a = str(input('o que tu quer? '))
b = int(input('quanto viado? '))
c = int(input("e os refri? "))

if a == "L":
	print(round(5*b+4*c,2))
else: 
	rint(round(3.5*b+4*c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    rint(round(3.5*b+4*c,2))
NameError: name 'rint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:16:56) 
-- CODE:
a = str(input('o que tu quer? '))
b = int(input('quanto viado? '))
c = int(input("e os refri? "))

if a == "L":
	print(float(round(5*b+4*c,2)))
else: 
	print(float(round(3.5*b+4*c,2)))
-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:17:08) 
-- CODE:
a = str(input('o que tu quer? '))
b = int(input('quanto viado? '))
c = int(input("e os refri? "))

if a == "L":
	print(float(round(5*b+4*c,2)))
else: 
	print(float(round(3.5*b+4*c,2)))
-- EXECUTION TIME:
0.171121
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
11.5
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
58.0
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
15.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
